--- a/AutoMall/ViewControllers/PersonalCenter/MailOrderListVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/MailOrderListVC.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -13,6 +14,8 @@
             <connections>
                 <outlet property="allBtn" destination="kAM-lr-VMv" id="Gf8-XC-Gnf"/>
                 <outlet property="allView" destination="R0U-lB-4Ux" id="344-F5-f7Q"/>
+                <outlet property="cancelBtn" destination="Kez-8G-Lf6" id="VEJ-IR-AdB"/>
+                <outlet property="cancelView" destination="SOO-XV-Wpq" id="G9k-vN-y53"/>
                 <outlet property="daifuBtn" destination="tgd-MX-QwO" id="DMS-aX-bgm"/>
                 <outlet property="daifuView" destination="hJN-PF-nga" id="gQF-qF-cTP"/>
                 <outlet property="myTableView" destination="Zt7-oH-q5Q" id="xli-ee-G6j"/>
@@ -38,7 +41,7 @@
                     <rect key="frame" x="0.0" y="64" width="375" height="44"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tgd-MX-QwO">
-                            <rect key="frame" x="16" y="7" width="60" height="30"/>
+                            <rect key="frame" x="17" y="7" width="60" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="60" id="TFh-7Z-wPc"/>
                                 <constraint firstAttribute="height" constant="30" id="XDX-z6-Tuh"/>
@@ -55,15 +58,57 @@
                             </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hJN-PF-nga">
-                            <rect key="frame" x="16" y="42" width="60" height="2"/>
+                            <rect key="frame" x="17" y="42" width="60" height="2"/>
                             <color key="backgroundColor" red="0.74901960779999999" green="0.21960784310000001" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="2" id="Cm8-iY-HF3"/>
                                 <constraint firstAttribute="width" constant="60" id="JQ8-tT-IEZ"/>
                             </constraints>
                         </view>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="seY-Nz-V2V">
+                            <rect key="frame" x="110.5" y="7" width="60" height="30"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <state key="normal" title="已付款">
+                                <color key="titleColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <state key="selected">
+                                <color key="titleColor" red="0.74901960779999999" green="0.21960784310000001" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="yifuAction:" destination="-1" eventType="touchUpInside" id="DbP-NP-0EY"/>
+                            </connections>
+                        </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8gT-rr-VhG">
+                            <rect key="frame" x="110.5" y="42" width="60" height="2"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="60" id="JPK-F8-ozg"/>
+                                <constraint firstAttribute="height" constant="2" id="ezj-rt-eHG"/>
+                            </constraints>
+                        </view>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kez-8G-Lf6">
+                            <rect key="frame" x="204" y="7" width="60" height="30"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <state key="normal" title="已取消">
+                                <color key="titleColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <state key="selected">
+                                <color key="titleColor" red="0.74901960779999999" green="0.21960784310000001" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="cancelAction:" destination="-1" eventType="touchUpInside" id="SHM-L2-mVN"/>
+                            </connections>
+                        </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SOO-XV-Wpq">
+                            <rect key="frame" x="204" y="42" width="60" height="2"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="60" id="7Y0-t3-319"/>
+                                <constraint firstAttribute="height" constant="2" id="EGJ-Do-I0n"/>
+                            </constraints>
+                        </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kAM-lr-VMv">
-                            <rect key="frame" x="299.5" y="7" width="59.5" height="30"/>
+                            <rect key="frame" x="298.5" y="7" width="59.5" height="30"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <state key="normal" title="全部">
                                 <color key="titleColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
@@ -76,34 +121,13 @@
                             </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R0U-lB-4Ux">
-                            <rect key="frame" x="299.5" y="42" width="60" height="2"/>
+                            <rect key="frame" x="298.5" y="42" width="60" height="2"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="60" id="5c6-gX-w4D"/>
                                 <constraint firstAttribute="height" constant="2" id="yFQ-9K-dKY"/>
                             </constraints>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8gT-rr-VhG">
-                            <rect key="frame" x="157" y="42" width="60" height="2"/>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="60" id="JPK-F8-ozg"/>
-                                <constraint firstAttribute="height" constant="2" id="ezj-rt-eHG"/>
-                            </constraints>
-                        </view>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="seY-Nz-V2V">
-                            <rect key="frame" x="157" y="7" width="60" height="30"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <state key="normal" title="已付款">
-                                <color key="titleColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
-                            </state>
-                            <state key="selected">
-                                <color key="titleColor" red="0.74901960779999999" green="0.21960784310000001" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
-                            </state>
-                            <connections>
-                                <action selector="yifuAction:" destination="-1" eventType="touchUpInside" id="DbP-NP-0EY"/>
-                            </connections>
-                        </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zt0-jy-ZDQ">
                             <rect key="frame" x="0.0" y="43" width="375" height="1"/>
                             <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.80000000000000004" alpha="1" colorSpace="deviceRGB"/>
@@ -117,25 +141,31 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="kAM-lr-VMv" secondAttribute="trailing" constant="16" id="1CB-Bx-5gO"/>
-                        <constraint firstItem="tgd-MX-QwO" firstAttribute="leading" secondItem="7hz-3j-bfU" secondAttribute="leading" constant="16" id="23o-gk-cg1"/>
+                        <constraint firstAttribute="bottom" secondItem="SOO-XV-Wpq" secondAttribute="bottom" id="6Jf-b4-qfv"/>
+                        <constraint firstItem="Kez-8G-Lf6" firstAttribute="centerX" secondItem="7hz-3j-bfU" secondAttribute="centerX" multiplier="5:4" id="9US-04-KRG"/>
                         <constraint firstItem="zt0-jy-ZDQ" firstAttribute="leading" secondItem="7hz-3j-bfU" secondAttribute="leading" id="CbM-Ds-8Ra"/>
                         <constraint firstItem="kAM-lr-VMv" firstAttribute="centerY" secondItem="tgd-MX-QwO" secondAttribute="centerY" id="DLq-ei-cV8"/>
+                        <constraint firstItem="Kez-8G-Lf6" firstAttribute="width" secondItem="tgd-MX-QwO" secondAttribute="width" id="FBm-D4-1Hn"/>
                         <constraint firstItem="kAM-lr-VMv" firstAttribute="top" secondItem="7hz-3j-bfU" secondAttribute="top" constant="7" id="Fsl-Cl-wxR"/>
                         <constraint firstAttribute="trailing" secondItem="zt0-jy-ZDQ" secondAttribute="trailing" id="HZh-rp-QZO"/>
                         <constraint firstItem="tgd-MX-QwO" firstAttribute="top" secondItem="7hz-3j-bfU" secondAttribute="top" constant="7" id="IQE-Dd-C4q"/>
                         <constraint firstItem="hJN-PF-nga" firstAttribute="centerX" secondItem="tgd-MX-QwO" secondAttribute="centerX" id="KdW-Jg-cbg"/>
+                        <constraint firstItem="seY-Nz-V2V" firstAttribute="centerX" secondItem="7hz-3j-bfU" secondAttribute="centerX" multiplier="3:4" id="Lch-hQ-s6y"/>
                         <constraint firstAttribute="height" constant="44" id="Myw-QJ-dHp"/>
-                        <constraint firstItem="seY-Nz-V2V" firstAttribute="centerX" secondItem="7hz-3j-bfU" secondAttribute="centerX" id="N8N-uQ-exC"/>
                         <constraint firstItem="seY-Nz-V2V" firstAttribute="centerY" secondItem="tgd-MX-QwO" secondAttribute="centerY" id="O4P-cd-gV9"/>
                         <constraint firstItem="kAM-lr-VMv" firstAttribute="width" secondItem="tgd-MX-QwO" secondAttribute="width" id="Pgu-xz-pNl"/>
                         <constraint firstItem="kAM-lr-VMv" firstAttribute="height" secondItem="tgd-MX-QwO" secondAttribute="height" id="QUQ-fB-FTo"/>
+                        <constraint firstItem="kAM-lr-VMv" firstAttribute="centerX" secondItem="7hz-3j-bfU" secondAttribute="centerX" multiplier="7:4" id="Rr3-Pp-wNS"/>
                         <constraint firstItem="R0U-lB-4Ux" firstAttribute="centerX" secondItem="kAM-lr-VMv" secondAttribute="centerX" id="Xyp-1o-FU3"/>
                         <constraint firstItem="8gT-rr-VhG" firstAttribute="centerX" secondItem="seY-Nz-V2V" secondAttribute="centerX" id="YW6-hX-zc2"/>
                         <constraint firstAttribute="bottom" secondItem="hJN-PF-nga" secondAttribute="bottom" id="ZAx-9s-prT"/>
+                        <constraint firstItem="SOO-XV-Wpq" firstAttribute="centerX" secondItem="Kez-8G-Lf6" secondAttribute="centerX" id="bgw-3b-w0c"/>
+                        <constraint firstItem="tgd-MX-QwO" firstAttribute="centerX" secondItem="7hz-3j-bfU" secondAttribute="centerX" multiplier="1:4" id="clz-15-HnV"/>
                         <constraint firstItem="seY-Nz-V2V" firstAttribute="height" secondItem="tgd-MX-QwO" secondAttribute="height" id="h8Y-Xk-LCZ"/>
+                        <constraint firstItem="Kez-8G-Lf6" firstAttribute="height" secondItem="tgd-MX-QwO" secondAttribute="height" id="h8e-rj-VrN"/>
                         <constraint firstAttribute="bottom" secondItem="zt0-jy-ZDQ" secondAttribute="bottom" id="lB9-8a-lZQ"/>
                         <constraint firstItem="seY-Nz-V2V" firstAttribute="width" secondItem="tgd-MX-QwO" secondAttribute="width" id="mBy-B2-Oti"/>
+                        <constraint firstItem="Kez-8G-Lf6" firstAttribute="centerY" secondItem="tgd-MX-QwO" secondAttribute="centerY" id="sgV-YF-gh2"/>
                         <constraint firstAttribute="bottom" secondItem="8gT-rr-VhG" secondAttribute="bottom" id="wo9-Sf-CwP"/>
                         <constraint firstAttribute="bottom" secondItem="R0U-lB-4Ux" secondAttribute="bottom" id="yej-gv-0lz"/>
                     </constraints>
@@ -151,7 +181,7 @@
                 <constraint firstItem="7hz-3j-bfU" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="mKu-5H-qlc"/>
                 <constraint firstItem="Zt7-oH-q5Q" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="mwf-w4-7aI"/>
             </constraints>
-            <point key="canvasLocation" x="-644" y="50"/>
+            <point key="canvasLocation" x="-626" y="-216"/>
         </view>
     </objects>
 </document>
