--- a/AutoMall/ViewControllers/Upkeep/CheckResultQRCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/CheckResultQRCell.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -19,30 +20,50 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="qrcode_us" translatesAutoresizingMaskIntoConstraints="NO" id="NGX-G0-Nfb">
-                        <rect key="frame" x="84.5" y="8" width="150" height="150"/>
+                        <rect key="frame" x="165" y="8" width="150" height="150"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="150" id="D1n-jc-IRS"/>
                             <constraint firstAttribute="height" constant="150" id="Lim-dk-NAY"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="i爱检车微信公众号" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6wE-Dw-AbG">
-                        <rect key="frame" x="97" y="166" width="126" height="18"/>
+                        <rect key="frame" x="177.5" y="166" width="126" height="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="qrcode_us" translatesAutoresizingMaskIntoConstraints="NO" id="H9A-jX-VAS">
+                        <rect key="frame" x="5" y="8" width="150" height="150"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="150" id="Upy-Z4-cHu"/>
+                            <constraint firstAttribute="height" constant="150" id="hLe-hN-TvG"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="门店微信公众号" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gCT-FD-FiQ">
+                        <rect key="frame" x="26.5" y="166" width="107.5" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="H9A-jX-VAS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="2nn-Wb-qjd"/>
                     <constraint firstItem="NGX-G0-Nfb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="772-dV-vDG"/>
                     <constraint firstItem="6wE-Dw-AbG" firstAttribute="top" secondItem="NGX-G0-Nfb" secondAttribute="bottom" constant="8" id="FWv-q3-lAJ"/>
-                    <constraint firstItem="NGX-G0-Nfb" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="oZr-9a-xcX"/>
+                    <constraint firstItem="gCT-FD-FiQ" firstAttribute="top" secondItem="H9A-jX-VAS" secondAttribute="bottom" constant="8" id="LNU-q6-Olz"/>
+                    <constraint firstItem="H9A-jX-VAS" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1:2" id="PgI-d3-dYC"/>
+                    <constraint firstItem="gCT-FD-FiQ" firstAttribute="centerX" secondItem="H9A-jX-VAS" secondAttribute="centerX" id="Rfr-uH-kdZ"/>
+                    <constraint firstItem="NGX-G0-Nfb" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="3:2" id="oZr-9a-xcX"/>
                     <constraint firstItem="6wE-Dw-AbG" firstAttribute="centerX" secondItem="NGX-G0-Nfb" secondAttribute="centerX" id="xpJ-V1-t3b"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="qrImgView" destination="NGX-G0-Nfb" id="FcO-xp-fbR"/>
+                <outlet property="mdqrImgCon" destination="PgI-d3-dYC" id="OR3-O2-VK5"/>
+                <outlet property="mdqrImgView" destination="H9A-jX-VAS" id="2WD-w3-tZY"/>
+                <outlet property="mdqrL" destination="gCT-FD-FiQ" id="TVP-1I-afh"/>
+                <outlet property="ptqrImgCon" destination="oZr-9a-xcX" id="tLa-X2-SNN"/>
             </connections>
-            <point key="canvasLocation" x="-62" y="64"/>
+            <point key="canvasLocation" x="-302" y="45"/>
         </tableViewCell>
     </objects>
     <resources>
