修改门店名称右侧箭头位置

--- a/AutoMall/ViewControllers/PersonalCenter/HeadNameCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/HeadNameCell.xib
@@ -101,7 +101,6 @@
                     <constraint firstItem="nuc-l9-QZX" firstAttribute="centerY" secondItem="gbz-tC-hl3" secondAttribute="centerY" id="91F-h2-1Pj"/>
                     <constraint firstItem="kXB-f4-Q3E" firstAttribute="centerY" secondItem="Caf-U9-tpv" secondAttribute="centerY" id="C9S-dn-H2N"/>
                     <constraint firstAttribute="bottom" secondItem="cpc-Qw-hH1" secondAttribute="bottom" constant="8" id="Cnd-eB-UhK"/>
-                    <constraint firstItem="Lp3-AS-aFc" firstAttribute="leading" secondItem="cpc-Qw-hH1" secondAttribute="trailing" constant="8" id="Cyi-1f-Ll6"/>
                     <constraint firstItem="IWA-yT-KfU" firstAttribute="leading" secondItem="4EI-uQ-Kdu" secondAttribute="trailing" constant="16" id="LCl-Cy-HB6"/>
                     <constraint firstItem="gbz-tC-hl3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="ZyL-c0-5Sf"/>
                     <constraint firstItem="Lp3-AS-aFc" firstAttribute="centerY" secondItem="kXB-f4-Q3E" secondAttribute="centerY" id="c2N-T5-9EW"/>
@@ -110,6 +109,7 @@
                     <constraint firstItem="gbz-tC-hl3" firstAttribute="leading" secondItem="4EI-uQ-Kdu" secondAttribute="trailing" constant="16" id="gC1-wO-Yrj"/>
                     <constraint firstItem="4EI-uQ-Kdu" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="iYg-Gu-AQq"/>
                     <constraint firstAttribute="trailing" secondItem="vHE-Dm-wg9" secondAttribute="trailing" constant="16" id="kz5-5j-VNa"/>
+                    <constraint firstItem="Lp3-AS-aFc" firstAttribute="leading" secondItem="kXB-f4-Q3E" secondAttribute="trailing" constant="10" id="lkb-d8-YND"/>
                     <constraint firstItem="nuc-l9-QZX" firstAttribute="leading" secondItem="gbz-tC-hl3" secondAttribute="trailing" constant="8" id="mss-Gs-WKo"/>
                     <constraint firstItem="Caf-U9-tpv" firstAttribute="leading" secondItem="4EI-uQ-Kdu" secondAttribute="trailing" constant="16" id="nY4-2K-fDS"/>
                     <constraint firstItem="kXB-f4-Q3E" firstAttribute="leading" secondItem="Caf-U9-tpv" secondAttribute="trailing" constant="8" id="oEj-1l-Y8U"/>
