--- a/AutoMall/ViewControllers/Upkeep/CheckResultQRCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/CheckResultQRCell.xib
@@ -45,25 +45,44 @@
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="qrcode_us" translatesAutoresizingMaskIntoConstraints="NO" id="ImH-Gd-TLU">
+                        <rect key="frame" x="85" y="8" width="150" height="150"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="150" id="9dG-Dd-BtM"/>
+                            <constraint firstAttribute="height" constant="150" id="W8K-s6-Xcp"/>
+                        </constraints>
+                    </imageView>
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="i爱检车微信公众号" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RuG-HX-gP5">
+                        <rect key="frame" x="97" y="166" width="126" height="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="H9A-jX-VAS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="2nn-Wb-qjd"/>
                     <constraint firstItem="NGX-G0-Nfb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="772-dV-vDG"/>
+                    <constraint firstItem="RuG-HX-gP5" firstAttribute="centerX" secondItem="ImH-Gd-TLU" secondAttribute="centerX" id="8gS-8d-13w"/>
                     <constraint firstItem="6wE-Dw-AbG" firstAttribute="top" secondItem="NGX-G0-Nfb" secondAttribute="bottom" constant="8" id="FWv-q3-lAJ"/>
+                    <constraint firstItem="RuG-HX-gP5" firstAttribute="top" secondItem="ImH-Gd-TLU" secondAttribute="bottom" constant="8" id="GbY-70-Dag"/>
                     <constraint firstItem="gCT-FD-FiQ" firstAttribute="top" secondItem="H9A-jX-VAS" secondAttribute="bottom" constant="8" id="LNU-q6-Olz"/>
                     <constraint firstItem="H9A-jX-VAS" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="1:2" id="PgI-d3-dYC"/>
                     <constraint firstItem="gCT-FD-FiQ" firstAttribute="centerX" secondItem="H9A-jX-VAS" secondAttribute="centerX" id="Rfr-uH-kdZ"/>
+                    <constraint firstItem="ImH-Gd-TLU" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="VLI-0n-2jf"/>
                     <constraint firstItem="NGX-G0-Nfb" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="3:2" id="oZr-9a-xcX"/>
+                    <constraint firstItem="ImH-Gd-TLU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="u4L-Yh-w0s"/>
                     <constraint firstItem="6wE-Dw-AbG" firstAttribute="centerX" secondItem="NGX-G0-Nfb" secondAttribute="centerX" id="xpJ-V1-t3b"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="mdqrImgCon" destination="PgI-d3-dYC" id="OR3-O2-VK5"/>
                 <outlet property="mdqrImgView" destination="H9A-jX-VAS" id="2WD-w3-tZY"/>
                 <outlet property="mdqrL" destination="gCT-FD-FiQ" id="TVP-1I-afh"/>
-                <outlet property="ptqrImgCon" destination="oZr-9a-xcX" id="tLa-X2-SNN"/>
+                <outlet property="ptImgView" destination="NGX-G0-Nfb" id="Q3p-Ww-0Hb"/>
+                <outlet property="ptL" destination="6wE-Dw-AbG" id="4G3-e7-ih2"/>
+                <outlet property="singleImgView" destination="ImH-Gd-TLU" id="YLj-4d-WQQ"/>
+                <outlet property="singleL" destination="RuG-HX-gP5" id="SNP-oP-vh1"/>
             </connections>
-            <point key="canvasLocation" x="-30" y="52"/>
+            <point key="canvasLocation" x="-174" y="27"/>
         </tableViewCell>
     </objects>
     <resources>
